<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_custom_worlds</name>
  <version>0.0.1</version>
  <description>Nav2 simulation launch files for AWS RoboMaker worlds (Gazebo Harmonic)</description>
  <maintainer email="aswoo55555@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
